# Open-Metadata-Exchange

./: .buildinfo  .env.example  .gitignore  .pre-commit-config.yaml  .shellcheckrc  =2.0.1  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-api  Dockerfile-fe  Dockerfile-nntp  INSTALL.md  Notes.org  Pipfile  README.html  README.md  SKILL.md  TODO.org  code_of_conduct.html  config.json.example  demo.html  docker-compose-two-hosts.yml  docker-compose-virtual-box.yml  docker-compose.debug.yml  docker-compose.yml  env.j2  env.template  genindex.html  index.html  index.md  objects.inv  ome_faq.md  pyproject.toml  requirements.html  root.html  search.html  searchindex.js
.github/: copilot-instructions.md  dependabot.yml
.github/skills/: plugin.md
.github/workflows/: bubba.yml  build.yml  ci.yml  docker-publish.yml  release.yml  sphinx.yml
_sources/: root.md.txt
demo/: README.md  michigan_mashup.py  ome_demo.py
docs/: Architecture.md  README.md  code_of_conduct.md  conf.py  contributing.md  demo.md  index.md  nontechnical_description.md  overview.md  requirements.txt  source.md
docs/_static/: Hub_and_Spoke.puml  OME_Network.puml  OME_Node_Components.puml
docs/changes/: p0-security-reliability.md
docs/vault/: Home.md  README.md
docs/vault/.obsidian/: app.json  bookmarks.json  core-plugins.json  graph.json  workspace.json
docs/vault/00-Meta/: About the Vault.md  Conventions.md
docs/vault/01-Overview/: Goals and Principles.md  Nontechnical Description.md  What is OME.md
docs/vault/02-Architecture/: Components.md  Data Model.md  Deduplication Strategy.md  NNTP Backbone.md  Plugin System.md  System Architecture.md
docs/vault/03-Getting-Started/: Local Development.md  Quickstart.md  Running the Frontend.md
docs/vault/04-Developer-Guide/: Contributing.md  Frontend Debug Helper.md  Pre-commit Hooks.md  Repository Layout.md  Testing.md  Type Checking with ty.md
docs/vault/05-Plugins/: EducationResource Model.md  Plugin Registry.md  Plugin System Overview.md  Writing a Plugin.md
docs/vault/06-Operations/: Deployment.md  NNTP Sync.md  Newsgroup Setup.md  Running INN.md
docs/vault/07-API-Reference/: NNTP Interface.md  REST API.md
docs/vault/08-User-Guide/: For Librarians.md  For OER Consumers.md  Publishing Resources.md
docs/vault/09-Decisions/: ADR Index.md  ADR-0001 NNTP as Backbone.md  ADR-0002 Plugin Architecture.md  ADR-0003 Deduplication Approach.md
docs/vault/99-Reference/: External Links.md  Glossary.md
fe/: README.md  index.html  package-lock.json  package.json  vite.config.mjs
fe/src/components/: CatalogCard.vue  ChannelList.vue
fe/src/pages/: channeldetails.vue  index.vue
fe/src/router/: index.js
fe/src/stores/: app.js
fe2/: Dockerfile  README.md  db.json  package-lock.json  package.json  tsconfig.json  webpack-stats.json  webpack.config.ts
fe2/public/: index.html
fe2/src/: index.tsx
fe2/src/app/: App.tsx
fe2/src/hooks/: redux.tsx
fe3/: Dockerfile  db.json  package-lock.json  tsconfig.json
fe3/config/jest/: jest.config.ts
fe3/public/: index.html  tweaks.css
fe3/src/: index.tsx  webc.ts
fe3/src/types/: collection.tsx
fe3/src/widgets/: enum.ts
frontend/: .eslintrc.js  .gitignore  package-lock.json  package.json  tsconfig.json  webpack.ark.config.ts  webpack.webc.config.ts
frontend/public/: tweaks.css
frontend/src/app/: App.tsx
frontend/src/hooks/: nav.tsx
frontend/src/shared/: debug.ts
inn2-server/: Dockerfile  README.md  docker-entrypoint.sh  inn.conf
scripts/: create_newsgroup.sh  create_newsgroups.py  edit_plugin_readmes.sh  get_metadata_from_newsgroup.py  get_nntp_channels.py  get_nntp_channels_min.py  json_viewer.py  nntp_io.py  nntp_sync.py  preview_docs.sh  scrape_course_source.py  scrape_qubes.py  sync_plugin_docs.py
server/: README.md  card_editor.py  config.py  connection_pool.py  example_article.eml  get_mimetypes_from_plugins.py  get_ome_plugins.py  helpers.py  logging_config.py  main.py  make_education_resource.py  newsgroups_view.py  nntp_article.py  oercommons_models.py  ome_node.py  openlibrary_authors_models.py  openlibrary_work.json  openlibrary_work_models.py  rate_limit.py  schemas.py  spdx_licenses.json  utils.py
server/plugins/: README.md  bulk_importer.py  ome_plugin.py
server/plugins/collage_photos/: README.md  bulk_import.py  collage_photos_article.eml  collage_photos_item.json  collage_photos_models.py  collage_photos_ome_item.json  get_photos.py  plugin.py
server/plugins/course_source/: convert_course_source_xml_to_json.py
server/plugins/early_learning/: README.md  bulk_import.py  early_learning_article.eml  early_learning_item.json  early_learning_models.py  (+3 more)
server_config/news_server/: Dockerfile  Notes.org  config.json  control.ctl.local  incoming.austin.conf  incoming.boston.conf  inn.austin.conf  inn.boston.conf  innfeed.austin.conf  innfeed.boston.conf  j2_filters.py  newsfeeds.austin  newsfeeds.boston  preseed.sh  preseed.sh.j2  wait_for_tcp.sh
src/: education_resource.py  nntp_io.py  nntplib_tests.py  pedigree_record.py  write_pydantic_objects_to_postgres.py
static/: index.html
templates/: channel_details.html  channels.html  newsgroups.html
tests/: conftest.py  test_docs.py  test_env_example.py  test_mit_opencourseware_plugin.py  test_nntp_article.py  test_no_strict_xfail.py  test_oercommons_bulk_import.py  test_ome_node.py  test_openlibrary_bulk_import.py  test_openstax_plugin.py  test_p0_config.py  test_p0_connection_pool.py  test_p0_main_endpoints.py  test_p0_utils.py  test_p1_logging.py  test_p1_main_endpoints_coverage.py  test_p1_pagination_validation.py  test_p1_plugin_interface.py  test_p1_rate_limit.py  test_p2_bulk_importer.py  test_p2_ci_workflow.py  test_p2_plugin_loader.py  test_p2_typecheck.py  test_p3_docs.py  test_prelinger_bulk_import.py  test_project_gutenberg_bulk_import.py  test_qubes_bulk_import.py  test_schemas.py  test_ty_precommit_hook.py  test_whg_bulk_import.py  test_whg_plugin.py
tools/har_parser/: har_parser.py
tools/monkeyscript/: BioQuestCUBES-2025-06-09.user.js  OERCommons.tampermonkey_script.js
(+629 files in other folders)
