[project]
name = "open-metadata-exchange"
version = "0.1.0"
description = "Open Metadata Exchange (OME)"
authors = [ { name = "ISKME and contributors" } ]
requires-python = "==3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi[standard]>=0.115.8",
  "pynntp>=2.0.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
]
docs = [
  "myst-parser>=4.0.1",
  "sphinx>=8.0.2",
  "sphinx-autoapi>=3.6",
  "sphinx-pyproject>=0.3",
  "sphinxcontrib-mermaid>=1",
]

[tool.ruff]
target-version = "py311"

lint.select = [ "ALL" ]
lint.ignore = [
  "COM812", # May cause conflicts with ruff format
  "D",      # pydocstyle
  "ERA",    # eradicate
  "FIX002", # Line contains TODO, consider resolving the issue
  "ISC001", # May cause conflicts with ruff format
  "T201",   # flake8-print
  "TD003",  # Missing issue link for this TODO
]
lint.per-file-ignores."tests/*" = [ "S101" ] # Use of assert detected
lint.per-file-ignores."tools/har_parser/har_parser.py" = [ "PTH" ] # flake8-use-pathlib
lint.pylint.allow-magic-value-types = [ "int", "str" ]

[tool.codespell]
ignore-words-list = "formend,thur"
skip = "*/package-lock.json,static/api/imls/v2/**/*.json"

[tool.pyproject-fmt]
max_supported_python = "3.12"

[tool.sphinx-pyproject]
copyright = "2024, ISKME and contributors"
autoapi_dirs = [ "server", "src" ]
exclude_patterns = [
  ".*/*",
  "fe",
  "fe2/node_modules",
  # "LICENSE.rst",
  "src/Open_Metadata_Exchange.egg-info",
  "Thumbs.db",
]
extensions = [
  "autoapi.extension",
  "myst_parser",
  "sphinxcontrib.mermaid",
]
html_static_path = [ "_static" ]
html_theme = "alabaster"
myst_enable_extensions = [
  "amsmath",
  "attrs_inline",
  "colon_fence",
  "deflist",
  "dollarmath",
  "fieldlist",
  "html_admonition",
  "html_image",
  # "linkify",
  "replacements",
  "smartquotes",
  "strikethrough",
  "substitution",
  "tasklist",
]
myst_fence_as_directive = [
  "include",
  "mermaid",
]
templates_path = [ "_templates" ]
[tool.sphinx-pyproject.source_suffix]
".rst" = "restructuredtext"
".txt" = "markdown"
".md" = "markdown"
