[project]
name = "open-metadata-exchange"
version = "0.1.0"
description = "Open Metadata Exchange (OME)"
license = "AGPL-3.0-only"
license-files = [ "LICENSE" ]
authors = [ { name = "ISKME and contributors" } ]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "fastapi[standard]>=0.136",
  "madoka>=0.7.2.1",
  "pondpond",
  "pynntp>=2.0.1",
]

[dependency-groups]
dev = [
  "beautifulsoup4>=4.13",
  "dateparser>=1.2",
  "httpx>=0.28",
  "pytest>=9.0.3",
  "pytest-run-parallel>=0.3",
]
docs = [
  "myst-parser>=4.0.1",
  "sphinx>=8.0.2",
  "sphinx-autoapi>=3.6",
  "sphinx-pyproject>=0.3",
  "sphinxcontrib-mermaid>=1",
]

[tool.ruff]
target-version = "py313"  # The default Python of the latest Debian LTS release: trixie (Debian 13)
# https://www.debian.org/releases
exclude = [ ".git/", "server/plugins/moodle/extract-mbz3.py" ]
lint.select = [ "ALL" ]
lint.ignore = [
  "COM812", # May cause conflicts with ruff format
  "D",      # pydocstyle
  "ERA",    # eradicate
  "FIX002", # Line contains TODO, consider resolving the issue
  "ISC001", # May cause conflicts with ruff format
  "T201",   # flake8-print
  "TC003",  # typing-only-standard-library-import
  "TD003",  # missing-todo-link
]
lint.per-file-ignores."server/schemas.py" = [ "N815" ]  # the case in the response json is dictated by the API
lint.per-file-ignores."tests/*" = [ "S101" ]  # Use of assert detected
lint.per-file-ignores."tools/har_parser/har_parser.py" = [ "PTH" ]  # flake8-use-pathlib
lint.pylint.allow-magic-value-types = [ "int", "str" ]

[tool.codespell]
ignore-words-list = "astroid,formend,oen,thur"
skip = """\
  *.csv,*.ctl,*.eml,*/ERIC_open_records.json,*/oapen_python_books.json,*/package-lock.json,*/whg.json,./fe*/node_module\
  s/*,static/api/imls/v2/**/*.json\
  """

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.ty]
# These rules produce errors in the current codebase; ratchet off as issues are fixed.
# Rules from PR #293's --ignore list that produced zero errors have been omitted.
rules.invalid-argument-type = "ignore"
rules.invalid-assignment = "ignore"
rules.invalid-return-type = "ignore"
rules.unresolved-attribute = "ignore"
rules.unresolved-import = "ignore"
rules.unresolved-reference = "ignore"
src.exclude = [ "server/plugins/moodle/extract-mbz3.py" ]

[tool.rumdl]
disable = [
  "MD001",
  "MD007",
  "MD012",
  "MD013",
  "MD022",
  "MD025",
  "MD026",
  "MD031",
  "MD032",
  "MD034",
  "MD040",
  "MD041",
  "MD057",
  "MD064"
]

[tool.sphinx-pyproject]
copyright = "2024, ISKME and contributors"
autoapi_dirs = [ "server", "src" ]
exclude_patterns = [
  ".*/*",
  "fe",
  "fe2/node_modules",
  # "LICENSE.rst",
  "src/Open_Metadata_Exchange.egg-info",
  "Thumbs.db",
]
extensions = [
  "autoapi.extension",
  "myst_parser",
  "sphinxcontrib.mermaid",
]
html_static_path = [ "_static" ]
html_theme = "alabaster"
myst_enable_extensions = [
  "amsmath",
  "attrs_inline",
  "colon_fence",
  "deflist",
  "dollarmath",
  "fieldlist",
  "html_admonition",
  "html_image",
  # "linkify",
  "replacements",
  "smartquotes",
  "strikethrough",
  "substitution",
  "tasklist",
]
myst_fence_as_directive = [
  "include",
  "mermaid",
]
templates_path = [ "_templates" ]
source_suffix.".rst" = "restructuredtext"
source_suffix.".txt" = "markdown"
source_suffix.".md" = "markdown"
